--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.9
 djangorestframework==3.3.2
 Flask==0.10.1
 Flask-Restless==0.17.0
+gunicorn==19.4.1
 itsdangerous==0.24
 Jinja2==2.8
 logging==0.4.9.6
