--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.9
 djangorestframework==3.3.2
+djangorestframework-jsonp==1.0.2
 Flask==0.10.1
 Flask-Restless==0.17.0
 gunicorn==19.4.1
