--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,14 @@ djangorestframework==3.3.2
 djangorestframework-jsonp==1.0.2
 Flask==0.10.1
 Flask-Restless==0.17.0
-gunicorn==19.4.1
+gunicorn
 itsdangerous==0.24
 Jinja2==2.8
 logging==0.4.9.6
 lxml==3.4.2
 MarkupSafe==0.23
 mimerender==0.5.5
-psycopg2==2.6.1
+psycopg2
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
 pytz==2015.2
