--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ lxml==3.4.2
 MarkupSafe==0.23
 mimerender==0.5.5
 nba-data==0.4
+psycopg2==2.6.2
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
 pytz==2015.2
